// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/styles/FireTextShadow Animation smoke-test 1`] = `
<h1 class="_animation_qd7ng_6">
  <span>
    F
  </span>
  <span>
    i
  </span>
  <span>
    r
  </span>
  <span>
    e
  </span>
  <span>
    T
  </span>
  <span>
    e
  </span>
  <span>
    x
  </span>
  <span>
    t
  </span>
  <span>
    S
  </span>
  <span>
    h
  </span>
  <span>
    a
  </span>
  <span>
    d
  </span>
  <span>
    o
  </span>
  <span>
    w
  </span>
</h1>
`;

exports[`stories/styles/FireTextShadow Normal smoke-test 1`] = `
<h1 class="_normal_qd7ng_1">
  <span>
    F
  </span>
  <span>
    i
  </span>
  <span>
    r
  </span>
  <span>
    e
  </span>
  <span>
    T
  </span>
  <span>
    e
  </span>
  <span>
    x
  </span>
  <span>
    t
  </span>
  <span>
    S
  </span>
  <span>
    h
  </span>
  <span>
    a
  </span>
  <span>
    d
  </span>
  <span>
    o
  </span>
  <span>
    w
  </span>
</h1>
`;

exports[`stories/styles/FireTextShadow Variants smoke-test 1`] = `
<h1 class="_variants_qd7ng_19">
  <span>
    F
  </span>
  <span>
    i
  </span>
  <span>
    r
  </span>
  <span>
    e
  </span>
  <span>
    T
  </span>
  <span>
    e
  </span>
  <span>
    x
  </span>
  <span>
    t
  </span>
  <span>
    S
  </span>
  <span>
    h
  </span>
  <span>
    a
  </span>
  <span>
    d
  </span>
  <span>
    o
  </span>
  <span>
    w
  </span>
</h1>
`;
